--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -35,6 +35,11 @@ jobs:
         uses: docker/metadata-action@v5.5.1
         with:
           images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
           
       - name: Build and Push Container Image
         id: push
