--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -1,8 +1,10 @@
 name: "Build Container Image"
 
 on:
+  workflow_dispatch:
   push:
     branches: ["main"]
+    tags: ["v*"]
   pull_request:
     branches: ["main"]
     paths-ignore:
