--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -42,6 +42,7 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
+            type=sha,format=long
           
       - name: Build and Push Container Image
         id: push
